# cria

./: README.md  __init__.py  pyproject.toml
cria/: __init__.py  _builder.py  _utils.py  clean_html.py  html_to_markdown.py  utils.py
cria/clean_data/: _builder.py  clean_html.py
cria/preprocessing/: _builder.py  clean_code.py  clean_html.py
