[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cria"
version = "0.1"
authors = [
    { name = "Daniel Han-Chen", email = "danielhanchen@gmail.com" },
]
description = "Finetuning LLaMA with cleaned datasets"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4",
    "lxml",
    "cchardet",
    "psutil",
    "pathos",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/danielhanchen/cria"
"Bug Tracker" = "https://github.com/danielhanchen/cria/issues"

[tool.setuptools.packages.find]
exclude = []

[tool.wheel]
exclude = []